--- a/style.css
+++ b/style.css
@@ -100,13 +100,21 @@ img[alt="dashboard"],
   font: 2rem 'robotomedium', sans-serif;
   color: var(--white-color);
   background-color: #3b82f6;
+  grid-area: 1 / 1 / 3 / 2;
 }
 
 .header {
   background-color: var(--white-color);
   font: 1.5rem 'robotomedium', sans-serif;
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.main-content {
+  background-color: var(--200-gray-color);
+  grid-area: 2 / 2 / 3 / 3;
 }
 
 .main-container {
-  background-color: var(--200-gray-color);
+  display: grid;
+  grid-template: 1fr 5fr / 1fr 4fr;
 }
