--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
 :root {
   --200-gray-color: #e5e7eb;
   --white-color: #fff;
+  --blue-color: #3b82f6;
 }
 
 * {
@@ -52,7 +53,7 @@ img[alt="bell-alert"] {
 
 img[alt="magnify"] {
   height: auto;
-  width: 20px;
+  width: 21px;
 }
 
 img[alt="dashboard"] {
@@ -68,6 +69,7 @@ img[alt="dashboard"],
 .search-bar div {
   background-color: var(--200-gray-color);
   height: 25px;
+  width: 70%;
   border-radius: 12px;
 }
 
@@ -99,7 +101,7 @@ img[alt="dashboard"],
 .sidebar {
   font: 2rem 'robotomedium', sans-serif;
   color: var(--white-color);
-  background-color: #3b82f6;
+  background-color: var(--blue-color);
   grid-area: 1 / 1 / 3 / 2;
 }
 
@@ -107,6 +109,55 @@ img[alt="dashboard"],
   background-color: var(--white-color);
   font: 1.5rem 'robotomedium', sans-serif;
   grid-area: 1 / 2 / 2 / 3;
+}
+
+.header-container {
+  height: 100%;
+  padding: 5px 40px;
+  display: grid;
+  grid-template: 1fr 2fr / 2fr 1fr;
+}
+
+.search-bar {
+  display: grid;
+  grid-template-columns: 21px 1fr;
+  column-gap: 10px;
+  align-items: center;
+}
+
+.greetings {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  align-items: center;
+  column-gap: 15px;
+}
+
+.greetings-text p:first-child {
+  font-size: 1rem;
+}
+
+.logged-in-user {
+  display: grid;
+  grid-template-columns: repeat(2, 30px) 150px;
+  justify-content: end;
+  align-items: center;
+  gap: 10px;
+}
+
+.user-actions {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  align-items: center;
+}
+
+button {
+  background-color: var(--blue-color);
+  padding: 5px 10px;
+  border: none;
+  border-radius: 15px;
+  font: 1.2rem 'robotomedium', sans-serif;
+  color: var(--white-color);
 }
 
 .main-content {
