--- a/style.css
+++ b/style.css
@@ -26,9 +26,11 @@
 }
 
 :root {
-  --200-gray-color: #e5e7eb;
+  --300-gray-color: #d1d5db;
+  --500-zing: #71717a;
   --white-color: #fff;
   --blue-color: #3b82f6;
+  --200-neutral: #f5f5f5;
 }
 
 * {
@@ -68,7 +70,7 @@ img[alt="dashboard"],
 }
 
 .search-bar div {
-  background-color: var(--200-gray-color);
+  background-color: var(--300-gray-color);
   height: 25px;
   width: 70%;
   border-radius: 12px;
@@ -85,9 +87,16 @@ img[alt="dashboard"],
 }
 
 .card-img {
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.card-img img {
   height: auto;
   width: 18px;
-  cursor: pointer;
 }
 
 .trending-card img {
@@ -164,13 +173,14 @@ button {
 }
 
 .main-content {
-  background-color: var(--200-gray-color);
+  background-color: var(--300-gray-color);
   grid-area: 2 / 2 / 3 / 3;
 }
 
 .main-container {
   display: grid;
   grid-template: 1fr 5fr / 1fr 4fr;
+  height: 100vh;
 }
 
 .sidebar {
@@ -197,4 +207,85 @@ button {
 .dashboard-row {
   display: flex;
   gap: 21px;
+}
+
+.main-content {
+  display: grid;
+  grid-template: repeat(2, 1fr) / 2fr 1fr;
+  padding: 18px 18px 30px 12px;
+  gap: 30px;
+}
+
+.projects-container {
+  grid-area: 1 / 1 / 3 / 2;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.card-container {
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+  gap: 15px;
+}
+
+.card {
+  font: 1rem 'robotoregular', sans-serif;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: var(--white-color);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: inset 5px 0 #fdba74;
+}
+
+.card-text p {
+  color: var(--500-zing);
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.2rem;
+}
+
+.announce-container {
+  grid-area: 1 / 2 / 2 / 3;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.announce-card-container {
+  background-color: var(--200-neutral);
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.trending-container {
+  grid-area: 2 / 2 / 3 / 3;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.trending-card-container {
+  background-color: var(--200-neutral);
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.trending-card {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
