--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ img[alt="dashboard"] {
 }
 
 img[alt="dashboard"],
-.dashboard-row > img {
+.dashboard-row>img {
   filter: invert(1);
 }
 
@@ -81,7 +81,7 @@ img[alt="dashboard"],
   width: 50px;
 }
 
-.dashboard-row > img {
+.dashboard-row>img {
   height: auto;
   width: 20px;
 }
@@ -120,6 +120,8 @@ img[alt="dashboard"],
   background-color: var(--white-color);
   font: 1.5rem 'robotomedium', sans-serif;
   grid-area: 1 / 2 / 2 / 3;
+  position: relative;
+  box-shadow: 0 3px 3px #b4b3b3;
 }
 
 .header-container {
@@ -227,13 +229,14 @@ button {
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(2, 1fr);
   gap: 15px;
+  flex: auto;
 }
 
 .card {
-  font: 1rem 'robotoregular', sans-serif;
+  font: 1.2rem 'robotoregular', sans-serif;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 2rem;
   background-color: var(--white-color);
   padding: 20px;
   border-radius: 10px;
@@ -245,7 +248,7 @@ button {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 h4 {
@@ -259,12 +262,17 @@ h4 {
   gap: 5px;
 }
 
+.trending-card-container,
 .announce-card-container {
   background-color: var(--200-neutral);
   padding: 20px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  flex: auto;
+}
+
+.announce-card-container {
   gap: 20px;
 }
 
@@ -273,14 +281,10 @@ h4 {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  font: 1.1rem 'robotoregular', sans-serif;
 }
 
 .trending-card-container {
-  background-color: var(--200-neutral);
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
   gap: 15px;
 }
 
@@ -288,4 +292,27 @@ h4 {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.card-container .card:nth-child(2) {
+  background-color: var(--200-neutral);
+}
+
+.announce-card-container .announce-card:nth-child(-n+2) {
+  border-bottom-style: solid;
+  border-color: var(--300-gray-color);
+}
+
+.announce-card {
+  padding: 10px;
+  font: 1rem 'robotothin', sans-serif;
+}
+
+.trending-text p:last-child,
+.announce-card p {
+  color: #52525a;
+}
+
+h5 {
+  font-size: 1.1rem;
 }
